force-app/main/default/objects/NoteDispatcher__c/NoteDispatcher__c.object-meta.xml
<CustomObject>
    <description>Will trigger outbound message for Notes object</description>
    <label>NoteDispatcher</label>
    <nameField>
        <label>NoteDispatcher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NoteDispatcher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>