force-app/main/default/objects/NoteDispatcher__c/fields/NoteID__c.field-meta.xml
<CustomField>
    <fullName>NoteID__c</fullName>
    <description>Original SF Note ID</description>
    <label>NoteID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>