force-app/main/default/objects/NoteDispatcher__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ContentVersion</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>